homeSection html + sass + responsive + darkmode

--- a/index.html
+++ b/index.html
@@ -106,17 +106,27 @@
         
         <section id="homeSection">
             <div id="homeContentMainContainer" class="defaultMainContainer">
-                <div class="homeContentContainers">
-                    <h1>Lorem ipsum dolor sit amet</h1>
-                </div>
-                <div class="homeContentContainers">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis ipsa facilis obcaecati! Explicabo at temporibus nam laboriosam rerum id rem!</p>
-                </div>
+                <div id="homeMainContentContainer">
+                    <img id="homeImg" src="https://cdn.pixabay.com/photo/2023/07/19/19/14/ai-generated-8137635_960_720.png" alt="">
+                    <div id="titleContainer" class="homeContentContainers">
+                        <h1>Lorem ipsum dolor sit amet
+                            <img src="https://cdn.pixabay.com/photo/2023/07/19/19/14/ai-generated-8137635_960_720.png" alt="" id="titleImg">
+                        </h1>
+                    </div>
 
-                <!-- "Projects" CTA -->
-
-                <div class="homeContentContainers ctaContainers">
-                    <a class="cta" href="#projectsSection" title="Projects section quick access">projects</a>
+                    <div id="homeSpeechAndCtaContainer">
+                        <div id="speechContainer">
+                            <h2>Lorem ipsum dolor sit amet consectetur adipisicing ?</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis ipsa facilis obcaecati! Explicabo at temporibus nam laboriosam rerum id rem!</p>
+                        </div>
+                        
+                        <!-- "Projects" CTA -->
+                        <div id="homeCtaMainContainer">
+                            <a id="homeCta" href="#projectsSection" title="Projects section quick access">projects
+                                <img id="homeCtaImg" src="https://cdn-icons-png.flaticon.com/128/4705/4705847.png" alt="">
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- home right sidenav -->
