responsive + darkmod sass

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <!-- color mode -->
 
                 <div id="colorModeContainer">
-                    <div id="darkModeBtn" class="colorModeBtns darkMode active" title="Dark mod"><img class="colorModeBtnImg active" src="https://cdn-icons-png.flaticon.com/128/899/899687.png" alt="Moon icon"></div> 
-                    <div id="lightModeBtn" class="colorModeBtns lightMode noActive" title="Light mod"><img class="colorModeBtnImg noActive" src="https://cdn-icons-png.flaticon.com/128/2787/2787372.png" alt="Sun icon"></div>
+                    <div id="darkModeBtn" class="colorModeBtns darkMode active" title="Dark mod"><img class="colorModeBtnImg active" src="https://cdn-icons-png.flaticon.com/128/4129/4129208.png" alt="Moon icon"></div> 
+                    <div id="lightModeBtn" class="colorModeBtns lightMode noActive" title="Light mod"><img class="colorModeBtnImg noActive" src="https://cdn-icons-png.flaticon.com/128/54/54455.png" alt="Sun icon"></div>
                 </div>
             </div>
             <div id="navbar">
@@ -122,7 +122,8 @@
                         
                         <!-- "Projects" CTA -->
                         <div id="homeCtaMainContainer">
-                            <a id="homeCta" href="#projectsSection" title="Projects section quick access">projects
+                            <a id="homeCta" href="#projectsSection" title="Projects section quick access">
+                                <p>projects</p> 
                                 <img id="homeCtaImg" src="https://cdn-icons-png.flaticon.com/128/4705/4705847.png" alt="">
                             </a>
                         </div>
