--- a/index.html
+++ b/index.html
@@ -298,7 +298,6 @@
 
         <!-- Contact Section -->
 
-
         <section id="contactSection">
             <div class="defaultMainContainer">
                 <div class="sectionTopContainers">
@@ -307,7 +306,7 @@
                 </div>
             </div>
 
-            <!-- contact form -->
+            <!-- Contact form -->
 
             <div class="formMainContainer" id="contactFormContainer">
                 <div class="card">
