gallery html/sass + responsive + darkmode

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                     <li class="quickAccess">
                         <a href="#contactSection" title="Contact section quick access"><img class="navbarIcons" src="https://cdn-icons-png.flaticon.com/128/1250/1250663.png" alt=""><p class="navbarTxt">contact</p></a>
                     </li>
+                    <li class="quickAccess">
+                        <a href="gallery.html" title="Gallery quick access"><img class="navbarIcons" src="https://cdn-icons-png.flaticon.com/128/8198/8198405.png" alt=""><p class="navbarTxt">gallery</p></a>
+                    </li>
                 </ul>
             </div>
             <div id="burgerMenuMainContainer">
@@ -101,6 +104,9 @@
                 </li>
                 <li class="quickAccess">
                     <a href="#contactSection" title="Contact section quick access">contact</a>
+                </li>
+                <li class="quickAccess">
+                    <a href="gallery.html" title="Contact section quick access">gallery</a>
                 </li>
             </ul>
         </div>
